--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -28,7 +28,7 @@ h2 {
   color: #ffb91d;
 }
 
-h3, h4, h5, p {
+h3, h4, h5, p, ul {
   margin-top: 1rem;
   color: #ddd;
 }
@@ -211,16 +211,12 @@ footer {
 
 footer .card {
   width: 15rem;
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 footer .card a {
   text-decoration: none;
   color: #444;
-}
-
-footer h3 {
-  margin-bottom: .75rem;
 }
 
 footer li {
