Clean up header img
Also move media queries

--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -56,8 +56,8 @@ main, footer {
 }
 
 header img {
-  height: auto;
-  margin: .25rem .75rem;
+  height: 20px;
+  margin: auto .75rem;
   object-fit: cover;
   width: auto;
 }
@@ -81,7 +81,14 @@ header nav a:hover {
   color: #fff;
 }
 
-
+@media only screen and (max-width: 700px) {
+  header nav {
+    display: none;
+  }
+  header img {
+    margin: auto auto;
+  }
+}
 
 /* Hero */
 .hero {
@@ -110,6 +117,16 @@ header nav a:hover {
   flex-wrap: wrap;
   width: 100%;
   background-color: #666;
+}
+
+@media only screen and (max-width: 700px) {
+  .hero h1 {
+    position: relative;
+    left: 0;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 /* Purpose */
@@ -226,12 +243,6 @@ footer li {
 }
 
 @media only screen and (max-width: 700px) {
-  header nav {
-    display: none;
-  }
-  header img {
-    margin: .25rem auto;
-  }
   .hero h1 {
     position: relative;
     left: 0;
